--- a/pyqt/pyproject.toml
+++ b/pyqt/pyproject.toml
@@ -1,7 +1,7 @@
 # https://www.riverbankcomputing.com/static/Docs/sip/index.html
 
 [build-system]
-requires = ["sip", "PyQt-builder"]
+requires = ["sip", "PyQt-builder", "PyQt5"]
 build-backend = "sipbuild.api"
 
 [tool.sip.metadata]
